--- a/server/server.vcxproj.filters
+++ b/server/server.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="server_tasks.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="message.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="server_tasks.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="message.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
