--- a/server/server.vcxproj
+++ b/server/server.vcxproj
@@ -140,9 +140,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="message.c" />
     <ClCompile Include="server_tasks.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="message.h" />
     <ClInclude Include="server_tasks.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
