client flow phase 1. messege bug fixes

--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="client_flow.c" />
     <ClCompile Include="client_tasks.c" />
     <ClCompile Include="main.c" />
     <ClCompile Include="message.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="client_flow.h" />
     <ClInclude Include="client_tasks.h" />
     <ClInclude Include="message.h" />
   </ItemGroup>
