--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -72,6 +72,7 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
+    <IncludePath>$(ProjectDir)\..\common;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -139,15 +140,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\common\message.c" />
+    <ClCompile Include="..\common\tasks.c" />
     <ClCompile Include="client_flow.c" />
     <ClCompile Include="client_tasks.c" />
     <ClCompile Include="main.c" />
-    <ClCompile Include="message.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\common\message.h" />
+    <ClInclude Include="..\common\tasks.h" />
     <ClInclude Include="client_flow.h" />
     <ClInclude Include="client_tasks.h" />
-    <ClInclude Include="message.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
