--- a/server/server.vcxproj.filters
+++ b/server/server.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\common\tasks.c">
       <Filter>common</Filter>
     </ClCompile>
+    <ClCompile Include="game.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="server_tasks.h">
@@ -46,6 +49,9 @@
     </ClInclude>
     <ClInclude Include="..\common\tasks.h">
       <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="game.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
