--- a/client/client.vcxproj
+++ b/client/client.vcxproj
@@ -142,14 +142,14 @@
   <ItemGroup>
     <ClCompile Include="..\common\message.c" />
     <ClCompile Include="..\common\tasks.c" />
-    <ClCompile Include="client_flow.c" />
+    <ClCompile Include="client_fsm.c" />
     <ClCompile Include="client_tasks.c" />
     <ClCompile Include="main.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\common\message.h" />
     <ClInclude Include="..\common\tasks.h" />
-    <ClInclude Include="client_flow.h" />
+    <ClInclude Include="client_fsm.h" />
     <ClInclude Include="client_tasks.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
