--- a/client/client.vcxproj.filters
+++ b/client/client.vcxproj.filters
@@ -24,21 +24,18 @@
     <ClCompile Include="client_tasks.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="client_flow.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\common\message.c">
       <Filter>common</Filter>
     </ClCompile>
     <ClCompile Include="..\common\tasks.c">
       <Filter>common</Filter>
     </ClCompile>
+    <ClCompile Include="client_fsm.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client_tasks.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="client_flow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\common\message.h">
@@ -46,6 +43,9 @@
     </ClInclude>
     <ClInclude Include="..\common\tasks.h">
       <Filter>common</Filter>
+    </ClInclude>
+    <ClInclude Include="client_fsm.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
